--- a/Level1/Assignments/Exercises/responsive -color-grid/index.html
+++ b/Level1/Assignments/Exercises/responsive -color-grid/index.html
@@ -7,25 +7,25 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="boxes">
+      <div id="box1"></div>
 
-    <div id="box1"></div>
+      <div id="box2"></div>
 
-    <div id="box2"></div>
+      <div id="box3"></div>
 
-    <div id="box3"></div>
+      <div id="box4"></div>
 
-    <div id="box4"></div>
+      <div id="box5"></div>
 
-    <div id="box5"></div>
+      <div id="box6"></div>
 
-    <div id="box6"></div>
+      <div id="box7"></div>
 
-    <div id="box7"></div>
+      <div id="box8"></div>
 
-    <div id="box8"></div>
-
-    <div id="box9"></div>
-
+      <div id="box9"></div>
+    </div>
     
 </body>
 </html>
