--- a/Level4/Portfolio/index.html
+++ b/Level4/Portfolio/index.html
@@ -57,7 +57,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>What I know</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>							
+									<p>Expansive knowledge in HTML5, CSS3, and JavaScript, specializing in React.js, MongoDB, Node.js and Express.js. With a knack of gaining more knowledge to expand and grow my expertise. </p>							
 								</div>
 							</div>
 						</section>
@@ -65,8 +65,8 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>What I bring</h2>
+									<p>I strive in keen attention to detail, precise care in my craft, and eager pursuit of new challenges to continue to grow as a developer.</p>
 								</div>
 							</div>
 						</section>
@@ -76,7 +76,7 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What I can do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>While I continue to pursue expansive knowledge in web development, here are a few selections of my current expertise.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
