--- a/Level4/Portfolio/index.html
+++ b/Level4/Portfolio/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Dakota Lail's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -49,25 +49,35 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Who I am</h2>
-									<p>An Air Force Veteran, prior criminal investigator, and currently offering insurance solutions, helping in any form is a true passion.</p>								</div>
+									<p>An Air Force Veteran, prior criminal investigator, and currently offering insurance solutions, helping in any form is a true passion.</p>	
+								</div>
+								<ul class="actions">
+									<li><a href="#know" class="button scrolly">next</a></li>
+								</ul>
 							</div>
 						</section>
-						<section>
+						<section id="know">
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>What I know</h2>
 									<p>Expansive knowledge in HTML5, CSS3, and JavaScript, specializing in React.js, MongoDB, Node.js and Express.js. With a knack of gaining more knowledge to expand and grow my expertise. </p>							
 								</div>
+								<ul class="actions"></ul>
+									<li><a href="#bring" class="button scrolly">next</a></li>
+								</ul>
 							</div>
 						</section>
-						<section>
+						<section id ="bring">
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>What I bring</h2>
 									<p>I strive in keen attention to detail, precise care in my craft, and eager pursuit of new challenges to continue to grow as a developer.</p>
 								</div>
+								<ul class="actions"></ul>
+									<li><a href="#two" class="button scrolly">next</a></li>
+								</ul>
 							</div>
 						</section>
 					</section>
@@ -80,33 +90,33 @@
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>HTML</h3>
+									<p>Understanding of the core fundamentals of web devlopment with HTML and the ground work and structure of web content.</p>
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>CSS</h3>
+									<p>Creating stylized and responsive webpages utlizing Cascading Style Sheets and in-line styling.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-cog"></span>
+									<h3>JavaScript</h3>
+									<p>Utilizing JavaScript to bring the execution and interactivity to the webpage to bring better user experiences to the webpage.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-desktop"></span>
+									<h3>Front End Devlopment</h3>
+									<p>Bringing HTML, CSS, and JavaScript all together to the screen specializing in a React based Front End structure.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-link"></span>
+									<h3>Back End Devopment</h3>
+									<p>Connecting the Front End to the server database using Express, Mongoose, and MongoDB specifically to connect the pieces together.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-lock "></span>
+									<h3>Authentication</h3>
+									<p>Securing user data with authentication tools and setting up username and password requirements with token encrypting with Bcrypt.</p>
 								</section>
 							</div>
 							<ul class="actions">
